<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#FFC125"
  android:id="@+id/login">
  <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  <RelativeLayout 
  	android:id="@+id/login_div"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="15dip"        
  	android:layout_margin="15dip" 
  	android:background="@drawable/background_login_div_bg"
  	>
  	<!-- 账号 -->
  	<TextView 
  		android:id="@+id/login_user_input"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="5dp"
  		android:text="账号"
  		style="@style/normalText"
  		
  		/>
  	<EditText 
  		android:id="@+id/username"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_username_hint"
  		android:layout_below="@id/login_user_input"
  		android:singleLine="true"
  		android:inputType="text"
  		android:textSize="15dp"
  			/>
    <!-- 密码 text -->
    <TextView 
    	android:id="@+id/login_password_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/username"
    	android:layout_marginTop="3dp"
    	android:text="密码"
    	style="@style/normalText"
    	
    	/>
    <EditText 
    	android:id="@+id/password"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/login_password_input"
    	android:hint="@string/register_password_hint"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    	android:textSize="15dp"
    	
    /> 
      <!-- 密码2 text -->
    <TextView 
    	android:id="@+id/login_password_input2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/password"
    	android:layout_marginTop="3dp"
    	android:text="确认密码"
    	style="@style/normalText"
    	/>
    <EditText 
    	android:id="@+id/password2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/login_password_input2"
    	android:hint="@string/register_password2_hint"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    	android:textSize="15dp"
    />
    <!--手机号 -->
    <TextView 
    	android:id="@+id/mobile"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/password2"
    	android:layout_marginTop="3dp"
    	android:text="手机号码"
    	style="@style/normalText"
    	/>
    <EditText 
    	android:id="@+id/mobilenumber"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/mobile"
    	android:hint="@string/register_phonenumber_hint"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    	android:textSize="15dp"
    />
    <!-- 登录button -->
    <Button 
    	android:id="@+id/button1"
    	android:layout_width="90dp"
    	android:layout_height="30dp"
    	android:layout_below="@id/mobilenumber"
    	android:layout_alignRight="@id/mobilenumber"
    	android:text="@string/register_label_signin"
    	android:textSize="15sp"
    	android:textColor="#ffffff"
    	android:background="@drawable/blue_button"
    />
  </RelativeLayout>
  
  

</LinearLayout>
