<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFB90F" >
 <!-- 标题 -->    
    <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1.9" >
                <include android:id="@+id/title" layout="@layout/title" />
     </LinearLayout>
<!-- 信息 -->     
    <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="0.5" 
             android:orientation="vertical"
             android:gravity="center_horizontal">
           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="11" 
              >    </LinearLayout>
           
           
                   
                  <ScrollView
                       android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                         android:layout_weight="1" >
             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1" 
              >
               <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"                  
                   android:text="商品名称："
                   android:textSize="15sp" 
                   android:textColor="#090909"
                   android:gravity="center"/>
               <EditText
                 
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"     
                   android:id="@+id/EditText1"
                   android:hint="@string/seller_up_shop_goodsname_hint"/>
           </LinearLayout>
 <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" >
                 <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"                 
                   android:text="        品牌："
                   android:textSize="15sp" 
                   android:textColor="#090909"
                   android:gravity="center"/>
               <EditText
                
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"
                   android:id="@+id/EditText2"
                   android:hint="@string/seller_up_shop_brand_hint" />             
        </LinearLayout> 
        <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" >
                 <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"                   
                   android:text="        类型："
                   android:textSize="15sp" 
                   android:textColor="#090909" 
                   android:gravity="center"/>
               <EditText
              
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"
                   android:id="@+id/EditText3"
                   android:hint="@string/seller_up_shop_type_hint"/>
               
        </LinearLayout> 
        <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" >
                 <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"                   
                   android:text="        型号："
                   android:textSize="15sp" 
                   android:textColor="#090909" 
                   android:gravity="center"/>
               <EditText
              
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"
                   android:id="@+id/EditText4"
                   android:hint="@string/seller_up_shop_model_hint"/>
               
        </LinearLayout>
        <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" >
                 <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"               
                   android:text="        单价："
                   android:textSize="15sp" 
                   android:textColor="#090909"
                   android:gravity="center"/>
               <EditText
              
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"
                   android:id="@+id/EditText5"
                   android:hint="@string/seller_up_shop_unit_hint" />
               
        </LinearLayout> <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" >
                 <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"               
                   android:text="        材质："
                   android:textSize="15sp" 
                   android:textColor="#090909"
                   android:gravity="center"
                   />
               <EditText 
                 
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"
                   android:id="@+id/EditText6"
                   android:hint="@string/seller_up_shop_material_hint" />
               
        </LinearLayout> <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" >
                 <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"               
                   android:text="        颜色:"
                   android:textSize="15sp" 
                   android:textColor="#090909"
                   android:gravity="center"
                   />
               <EditText
                 
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"
                   android:id="@+id/EditText7" 
                   android:hint="@string/seller_up_shop_color_hint"/>
               
        </LinearLayout> 
        <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" >
                 <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="3"               
                   android:text="      图片名称:"
                   android:textSize="15sp" 
                   android:textColor="#090909"
                   android:gravity="center"
                   />
               <EditText                
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"                   
                   android:textSize="15sp"
                   android:id="@+id/EditText8" 
                   android:hint="@string/seller_up_shop_color_hint"/>
               
        </LinearLayout>
           </LinearLayout> 
	  </ScrollView>
        </LinearLayout>
        <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1.9" >
              <Button 
                  android:id="@+id/btn1"
                  android:layout_width="96dp"
                  android:layout_height="27dp"
                  android:text="上   铺"
                  android:textColor="#ffffff"
                  android:layout_marginLeft="210dp"
                  android:background="@drawable/bt_red" />  
                  </LinearLayout>
 <!-- 菜单 -->          
     <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1.82" >
 <include android:id="@+id/under" layout="@layout/under" />       </LinearLayout>
</LinearLayout>